[package]
name = "ampc"
description = "Compiler for the Amp language"
license = "MIT"
version = "0.5.0-alpha"
edition = "2021"
repository = "https://github.com/amp-lang/amp"
homepage = "https://github.com/amp-lang/amp"

[lib]
[[bin]]
name = "ampc"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
cranelift = "0.94.0"
cranelift-module = "0.94.0"
cranelift-native = "0.94.0"
cranelift-object = "0.94.0"
slot-arena = "0.1.0"
target-lexicon = "0.12.6"
termcolor = "1.2.0"
unicode-width = "0.1.10"
unicode-xid = "0.2.4"